Login Buttons Components

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -4,4 +4,7 @@
 
 //create-react-app
 @import "../App.scss";
-@import "../index.scss"
+@import "../index.scss";
+
+//components
+@import "./components/LoginButtons/GitHubButton.scss";
