Home with responsive

--- a/src/styles/global/variables.scss
+++ b/src/styles/global/variables.scss
@@ -1,7 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;500;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;500;700&display=swap");
 
 //<---| Font Families & Font Weights |--->//
-$Font-Family-Roboto: 'Roboto', sans-serif;
+$Font-Family-Roboto: "Roboto", sans-serif;
 $Thin-Font: 100;
 $Light-Font: 300;
 $Medium-Font: 500;
@@ -15,12 +15,14 @@ $Popup-Size: 2.7rem;
 $Title-Size: 3rem;
 
 //<---| Color Palette |--->//
-$Color-Black: #191A21;
-$Color-Bg-Black: #282A36;
-$Color-Gray: #5E627D;
-$Color-Light-Gray: #6B6F8D;
-$Color-Yellow: #FBDA56;
-$Color-Orange: #F8705D;
-$Color-Pink: #F31483;
-$Color-Light-Blue: #32EDE9;
-$Color-Blue: #758DFF;
+$Color-Black: #191a21;
+$Color-Bg-Black: #282a36;
+$Color-Gray: #5e627d;
+$Color-Light-Gray: #6b6f8d;
+$Colot-Font-Light-Gray: #9b9b9b;
+$Color-White: #ffffff;
+$Color-Yellow: #fbda56;
+$Color-Orange: #f8705d;
+$Color-Pink: #f31483;
+$Color-Light-Blue: #32ede9;
+$Color-Blue: #758dff;
