--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -6,5 +6,5 @@
 @import "../App.scss";
 @import "../index.scss";
 
-//components
-@import "./components/LoginButtons/GitHubButton.scss";
+//screens
+@import "./screens/HomeScreen.scss";
