--- a/src/styles/screens/HomeScreen.scss
+++ b/src/styles/screens/HomeScreen.scss
@@ -13,6 +13,8 @@
     #HomeScreenLottie {
         width: 28vw;
         height: 40%;
+        min-width: 380px;
+        min-height: 235px;
     }
     #HomeScreenTitle {
         width: 100vw;
@@ -48,6 +50,8 @@
         #HomeScreenLottie {
             width: 38vw;
             height: 40%;
+            min-width: 410px;
+            min-height: 265px;
         }
     }
 }
@@ -57,12 +61,57 @@
         #HomeScreenLottie {
             width: 60vw;
             height: 40%;
+            min-width: 350px;
+            min-height: 235px;
         }
         #HomeScreenTitle {
             font-size: $Subtitle-Size;
         }
         #HomeScreenText {
-            font-size: 1.15rem;
+            font-size: 1.1rem;
+        }
+        #HomeScreenButtons {
+            width: 250px;
+            height: 130px;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+        }
+    }
+}
+
+@media (max-width: 450px) {
+    #HomeScreenContainer {
+        #HomeScreenLottie {
+            width: 70vw;
+            height: 40%;
+            min-width: 250px;
+            min-height: 245px;
+        }
+        #HomeScreenTitle {
+            font-size: 1.5rem;
+        }
+        #HomeScreenText {
+            font-size: 0.9rem;
+            margin: 15px;
+        }
+        #HomeScreenButtons {
+            width: 200;
+        }
+    }
+}
+
+@media (max-width: 390px) {
+    #HomeScreenContainer {
+        #HomeScreenLottie {
+            min-width: 250px;
+            min-height: 245px;
+        }
+        #HomeScreenTitle {
+            font-size: 1.3rem;
+        }
+        #HomeScreenText {
+            font-size: 0.7rem;
         }
     }
 }
