--- a/src/styles/screens/ProblemsScreen.scss
+++ b/src/styles/screens/ProblemsScreen.scss
@@ -1,19 +1,20 @@
 .ProblemScreenContainer {
-    width: 100vw;
-    height: 100vh;
-    padding-top: 2.5%;
+    width: 99vw;
+    margin-top: 12vh;
     display: flex;
-    align-items: center;
     justify-content: center;
     .ProblemListContainer {
         width: 90vw;
-        height: 85vh;
+        height: auto;
+        padding-top: 1.5vh;
+        padding-bottom: 5vh;
+        margin-bottom: 5vh;
         background-color: #7e84a763;
         display: flex;
         align-items: center;
         flex-direction: column;
         justify-content: center;
-        border-radius: 2.5%;
+        border-radius: 20px;
         h1 {
             color: white;
             width: 100%;
