--- a/src/styles/screens/ProblemFormScreen/ProblemFormScreen.scss
+++ b/src/styles/screens/ProblemFormScreen/ProblemFormScreen.scss
@@ -9,18 +9,17 @@
   text-align: center;
 }
 
-@media (max-width: 376px) {
+@media (max-width: 768px) {
   #buttonBox {
     display: flex;
     justify-content: center;
     width: 100%;
     height: 50px;
     margin-top: 20px;
+    margin-bottom: 2rem;
     .button {
       margin-right: 20px !important;
       width: 30%;
-      // float: "right";
-      // display: "flex";
     }
   }
 }
