correcciones de stilos ProblemTab2

--- a/src/styles/screens/ProblemFormScreen/ProblemTabs/ProblemTab2/ProblemTab2.scss
+++ b/src/styles/screens/ProblemFormScreen/ProblemTabs/ProblemTab2/ProblemTab2.scss
@@ -64,9 +64,8 @@
     }
   }
   #CodeEditorBox__Tab2 {
-    width: 72% !important;
+    width: 77%;
     display: inline-block;
-    margin-right: 0.8rem;
     margin-top: 3rem;
     margin-bottom: 2rem;
     justify-content: start;
@@ -89,7 +88,7 @@
     }
   }
   #CodeEditorBox__Tab2 {
-    width: 72% !important;
+    width: 63.8%;
     display: inline-block;
     margin-right: 0.8rem;
     margin-top: 3rem;
