--- a/src/styles/screens/ProblemFormScreen/ProblemTabs/ProblemTab2/ProblemTab2.scss
+++ b/src/styles/screens/ProblemFormScreen/ProblemTabs/ProblemTab2/ProblemTab2.scss
@@ -49,7 +49,7 @@
   }
 }
 
-@media (min-width: 427px) and (max-width: 1441px) {
+@media (min-width: 427px) and (max-width: 1440px) {
   #TextFieldBox__Tab2 {
     width: 70vw;
     text-align: center;
@@ -64,7 +64,7 @@
     }
   }
   #CodeEditorBox__Tab2 {
-    width: 77%;
+    width: 71.5%;
     display: inline-block;
     margin-top: 3rem;
     margin-bottom: 2rem;
@@ -72,7 +72,16 @@
     text-align: start;
   }
 }
-
+@media (min-width: 1440px) and (max-width: 2558px) {
+  #CodeEditorBox__Tab2 {
+    width: 76.8%;
+    display: inline-block;
+    margin-top: 3rem;
+    margin-bottom: 2rem;
+    justify-content: start;
+    text-align: start;
+  }
+}
 @media (min-width: 1441px) {
   #TextFieldBox__Tab2 {
     width: 70vw;
