acomodar problemFormScreen styles

--- a/src/styles/screens/ProblemFormScreen/ProblemFormScreen.scss
+++ b/src/styles/screens/ProblemFormScreen/ProblemFormScreen.scss
@@ -1,6 +1,5 @@
-.ProblemScreenContainer {
+.ProblemFormScreenContainer {
   width: 85vw;
-  // margin-top: 15vh;
   margin-left: 0;
   margin-right: 0;
   display: flex;
