modify style name of ProblemFormScreen scss

--- a/src/styles/screens/ProblemFormScreen/ProblemFormScreen.scss
+++ b/src/styles/screens/ProblemFormScreen/ProblemFormScreen.scss
@@ -6,6 +6,7 @@
   flex-direction: column;
   justify-content: center;
   text-align: center;
+  margin-top: 5rem;
 }
 @media (max-width: 321px) {
   #buttonBox {
