ProblemFormScreen styles ready for QA

--- a/src/styles/screens/ProblemFormScreen/ProblemFormScreen.scss
+++ b/src/styles/screens/ProblemFormScreen/ProblemFormScreen.scss
@@ -110,32 +110,57 @@
     margin-bottom: 2rem;
 
     .button {
-      float: "right";
-      display: "flex";
-      margin-right: 20px;
+      float: right;
+      display: flex;
+      margin-right: 35px;
     }
   }
 }
 
-@media (min-width: 1439px) and (max-width: 2558px) {
+@media (min-width: 1439px) and (max-width: 1500px) {
   #buttonBox {
     display: flex;
     justify-content: flex-end;
-    width: 70.5%;
+    width: 90%;
     height: 50px;
     margin-top: 20px;
     margin-bottom: 2rem;
     margin-left: 16rem;
     #BackButton__ProblemFormScreen {
       width: 100px;
+      margin-right: 2rem;
     }
     #NextButton__ProblemFormScreen {
       width: 100px;
-      margin-right: 0.5rem;
+      margin-right: 22%;
     }
     .button {
-      float: "right";
-      display: "flex";
+      float: right;
+      display: flex;
+    }
+  }
+}
+
+@media (min-width: 1500px) and (max-width: 2558px) {
+  #buttonBox {
+    display: flex;
+    justify-content: flex-end;
+    width: 90%;
+    height: 50px;
+    margin-top: 20px;
+    margin-bottom: 2rem;
+    margin-left: 16.5%;
+    #BackButton__ProblemFormScreen {
+      width: 100px;
+      margin-right: 2rem;
+    }
+    #NextButton__ProblemFormScreen {
+      width: 100px;
+      margin-right: 20.5%;
+    }
+    .button {
+      float: right;
+      display: flex;
     }
   }
 }
@@ -148,14 +173,17 @@
     height: 50px;
     margin-top: 20px;
     margin-bottom: 2rem;
-    margin-right: 11rem;
     #NextButton__ProblemFormScreen {
       width: 100px;
-      margin-right: 0.5rem;
     }
     #BackButton__ProblemFormScreen {
       width: 100px;
-      margin-left: 8.5rem !important;
+      margin-right: 2rem;
+      margin-left: 10%;
+    }
+    .button {
+      float: right;
+      display: flex;
     }
   }
 }
