--- a/src/styles/screens/ProblemFormScreen/ProblemTabs/ProblemTab1/ProblemTab1.scss
+++ b/src/styles/screens/ProblemFormScreen/ProblemTabs/ProblemTab1/ProblemTab1.scss
@@ -139,11 +139,11 @@
     margin-right: auto;
     margin-top: 1rem;
     #TitleField {
-      width: 250px;
+      width: 180px;
       color: white;
     }
     #SelectField {
-      width: 250px;
+      width: 180px;
       color: white;
       justify-content: start;
       text-align: start;
@@ -185,7 +185,7 @@
   }
 }
 
-@media (min-width: 769px) and (max-width: 1438px) {
+@media (min-width: 769px) and (max-width: 1110px) {
   body {
     text-align: center;
   }
@@ -196,12 +196,12 @@
     margin-right: auto !important;
 
     #TitleField {
-      width: 250px;
+      width: 200px;
       color: white;
       margin-top: 3rem;
     }
     #SelectField {
-      width: 250px !important;
+      width: 200px !important;
       color: white;
       margin-top: 3rem !important;
       justify-content: start;
@@ -223,11 +223,11 @@
     }
   }
   #InputLabelDescriptionBox {
-    margin-left: 5.2rem;
+    margin-left: 7.5%;
   }
   #InputLabelSolutionBox {
     height: 20px;
-    margin-left: 5.7rem;
+    margin-left: 7.5%;
     width: 150px !important;
     #InputLabelSolution {
       padding-top: 1.3rem;
@@ -254,7 +254,76 @@
   }
 }
 
-@media (min-width: 1439px) and (max-width: 2558px) {
+@media (min-width: 1110px) and (max-width: 1438px) {
+  body {
+    text-align: center;
+  }
+  #TextFieldBox {
+    width: 100%;
+    text-align: center;
+    margin-left: auto !important;
+    margin-right: auto !important;
+
+    #TitleField {
+      width: 325px;
+      color: white;
+      margin-top: 3rem;
+    }
+    #SelectField {
+      width: 325px;
+      color: white;
+      margin-top: 3rem !important;
+      justify-content: start;
+      text-align: start;
+    }
+  }
+
+  #TextAreaLgBox {
+    padding: 1rem;
+    margin-top: 3rem;
+    width: 81%;
+    margin-left: auto;
+    margin-right: auto;
+    #TextAreaLg {
+      background-color: #282a36;
+      color: white;
+      font-family: arial;
+      font-size: 18px;
+    }
+  }
+  #InputLabelDescriptionBox {
+    margin-left: 7.5%;
+  }
+  #InputLabelSolutionBox {
+    height: 20px;
+    margin-left: 7.5%;
+    width: 150px !important;
+    #InputLabelSolution {
+      padding-top: 1.3rem;
+    }
+  }
+  #CodeEditorBox {
+    width: 40.5% !important;
+    display: inline-block;
+    margin-left: 1.7rem;
+    margin-bottom: 2rem;
+    justify-content: start !important;
+    text-align: start !important;
+  }
+
+  .TextArea {
+    height: 291px !important;
+    background-color: #282a36;
+    width: 41.2% !important;
+    color: white;
+    font-family: "arial";
+    font-size: 18px;
+    margin-left: 0.5rem;
+    margin-right: 0.2rem;
+  }
+}
+
+@media (min-width: 1439px) and (max-width: 1800px) {
   body {
     text-align: center;
   }
@@ -264,12 +333,12 @@
     margin-left: auto;
     margin-right: auto;
     #TitleField {
-      width: 400px;
+      width: 480px;
       color: white;
       margin-top: 3rem;
     }
     #SelectField {
-      width: 400px;
+      width: 480px;
       color: white;
       margin-top: 3rem !important;
       justify-content: start;
@@ -277,7 +346,7 @@
     }
   }
   #InputLabelDescription {
-    margin-left: 10rem;
+    margin-left: 11.5%;
   }
   #TextAreaLgBox {
     padding: 1rem;
@@ -301,7 +370,7 @@
     height: 20px;
     #InputLabelSolution {
       padding-top: 2rem;
-      margin-left: 2.8rem;
+      margin-left: 4.2%;
     }
   }
   .TextArea {
@@ -309,8 +378,130 @@
     background-color: #282a36;
     width: 44%;
     color: white;
-    font-family: "arial";
-    font-size: "18px";
+    font-family: arial;
+    font-size: 18px;
+    margin-left: 0.4rem;
+    margin-top: 3rem;
+  }
+}
+@media (min-width: 1800px) and (max-width: 2155px) {
+  body {
+    text-align: center;
+  }
+  #TextFieldBox {
+    width: 90vw;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    #TitleField {
+      width: 600px;
+      color: white;
+      margin-top: 3rem;
+    }
+    #SelectField {
+      width: 600px;
+      color: white;
+      margin-top: 3rem !important;
+      justify-content: start;
+      text-align: start;
+    }
+  }
+  #InputLabelDescription {
+    margin-left: 11.5%;
+  }
+  #TextAreaLgBox {
+    padding: 1rem;
+    margin-top: 3rem;
+    #TextAreaLg {
+      width: 77% !important;
+      background-color: #282a36;
+      color: white;
+      font-family: arial;
+      font-size: 18px;
+    }
+  }
+  #CodeEditorBox {
+    width: 44% !important;
+    display: inline-block;
+    margin-left: 2.9rem;
+    justify-content: start !important;
+    text-align: start !important;
+  }
+  #InputLabelSolutionBox {
+    height: 20px;
+    #InputLabelSolution {
+      padding-top: 2rem;
+      margin-left: 4.1%;
+    }
+  }
+  .TextArea {
+    height: 291px !important;
+    background-color: #282a36;
+    width: 45.5%;
+    color: white;
+    font-family: arial;
+    font-size: 18px;
+    margin-left: 0.4rem;
+    margin-top: 3rem;
+  }
+}
+@media (min-width: 2155px) and (max-width: 2559px) {
+  body {
+    text-align: center;
+  }
+  #TextFieldBox {
+    width: 90vw;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    #TitleField {
+      width: 720px;
+      color: white;
+      margin-top: 3rem;
+    }
+    #SelectField {
+      width: 720px;
+      color: white;
+      margin-top: 3rem !important;
+      justify-content: start;
+      text-align: start;
+    }
+  }
+  #InputLabelDescription {
+    margin-left: 11.6%;
+  }
+  #TextAreaLgBox {
+    padding: 1rem;
+    margin-top: 3rem;
+    #TextAreaLg {
+      width: 77% !important;
+      background-color: #282a36;
+      color: white;
+      font-family: arial;
+      font-size: 18px;
+    }
+  }
+  #CodeEditorBox {
+    width: 44% !important;
+    display: inline-block;
+    margin-left: 2.9rem;
+    justify-content: start !important;
+    text-align: start !important;
+  }
+  #InputLabelSolutionBox {
+    height: 20px;
+    #InputLabelSolution {
+      padding-top: 2rem;
+      margin-left: 3.9%;
+    }
+  }
+  .TextArea {
+    height: 291px !important;
+    background-color: #282a36;
+    width: 46%;
+    color: white;
+    font-family: arial;
+    font-size: 18px;
     margin-left: 0.4rem;
     margin-top: 3rem;
   }
@@ -339,7 +530,7 @@
     }
   }
   #InputLabelDescription {
-    margin-left: 28.8rem;
+    margin-left: 18.5%;
   }
   #TextAreaLgBox {
     padding: 1rem;
@@ -363,7 +554,7 @@
     height: 20px;
     #InputLabelSolution {
       padding-top: 2.1rem;
-      margin-left: 15.5rem;
+      margin-left: 12.2%;
     }
   }
   .TextArea {
