--- a/src/styles/screens/ProblemFormScreen/ProblemTabs/ProblemTab2/ProblemTab2.scss
+++ b/src/styles/screens/ProblemFormScreen/ProblemTabs/ProblemTab2/ProblemTab2.scss
@@ -30,7 +30,7 @@
     margin-left: auto;
     margin-right: auto;
     #SelectField__Tab2 {
-      width: 250px;
+      width: 230px;
       color: white;
       margin-top: 2rem;
       justify-content: start;
@@ -49,7 +49,31 @@
   }
 }
 
-@media (min-width: 427px) and (max-width: 1440px) {
+@media (min-width: 428px) and (max-width: 550px) {
+  #TextFieldBox__Tab2 {
+    width: 70vw;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    #SelectField__Tab2 {
+      width: 200px;
+      color: white;
+      margin-top: 2rem;
+      justify-content: start;
+      text-align: start;
+    }
+  }
+  #CodeEditorBox__Tab2 {
+    width: 71.5%;
+    display: inline-block;
+    margin-top: 3rem;
+    margin-bottom: 2rem;
+    justify-content: start;
+    text-align: start;
+  }
+}
+
+@media (min-width: 550px) and (max-width: 1440px) {
   #TextFieldBox__Tab2 {
     width: 70vw;
     text-align: center;
@@ -72,24 +96,15 @@
     text-align: start;
   }
 }
-@media (min-width: 1440px) and (max-width: 2558px) {
-  #CodeEditorBox__Tab2 {
-    width: 76.8%;
-    display: inline-block;
-    margin-top: 3rem;
-    margin-bottom: 2rem;
-    justify-content: start;
-    text-align: start;
-  }
-}
+
 @media (min-width: 1441px) {
   #TextFieldBox__Tab2 {
     width: 70vw;
     text-align: center;
     margin-left: auto;
     margin-right: auto;
-    #SelectField {
-      width: 450px;
+    #SelectField__Tab2 {
+      width: 400px;
       color: white;
       margin-top: 2rem;
       justify-content: start;
@@ -97,7 +112,7 @@
     }
   }
   #CodeEditorBox__Tab2 {
-    width: 63.8%;
+    width: 76.8%;
     display: inline-block;
     margin-right: 0.8rem;
     margin-top: 3rem;
