agregar estilos al boton de guardar template y correcciones de estilos de tab2

--- a/src/styles/screens/ProblemFormScreen/ProblemTabs/ProblemTab2/ProblemTab2.scss
+++ b/src/styles/screens/ProblemFormScreen/ProblemTabs/ProblemTab2/ProblemTab2.scss
@@ -1,3 +1,9 @@
+#ButtonBoxCodeEditor__Tab2 {
+  margin-top: 1rem;
+  text-align: center;
+  width: 100%;
+}
+
 @media (max-width: 376px) {
   #TextFieldBox__Tab2 {
     width: 70vw;
@@ -22,7 +28,6 @@
     text-align: start;
   }
 }
-
 @media (min-width: 376px) and (max-width: 426px) {
   #TextFieldBox__Tab2 {
     width: 70vw;
