--- a/src/styles/screens/ProblemFormScreen/ProblemTabs/ProblemTab1/ProblemTab1.scss
+++ b/src/styles/screens/ProblemFormScreen/ProblemTabs/ProblemTab1/ProblemTab1.scss
@@ -137,7 +137,7 @@
     text-align: center;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 1rem;
+    // margin-top: 1rem;
     #TitleField {
       width: 180px;
       color: white;
@@ -169,7 +169,7 @@
   }
   #CodeEditorBox {
     margin-left: 0.2rem;
-    width: 101% !important;
+    width: 100% !important;
     display: inline-block;
     margin-top: 2rem;
     justify-content: start !important;
@@ -192,8 +192,8 @@
   #TextFieldBox {
     width: 100%;
     text-align: center;
-    margin-left: auto !important;
-    margin-right: auto !important;
+    margin-left: auto;
+    margin-right: auto;
 
     #TitleField {
       width: 200px;
