--- a/src/styles/screens/ProblemFormScreen/ProblemTabs/ProblemTab3/ProblemTab3.scss
+++ b/src/styles/screens/ProblemFormScreen/ProblemTabs/ProblemTab3/ProblemTab3.scss
@@ -1,6 +1,14 @@
 #TextFieldBox__InputOutput {
   color: white;
-  width: 100%;
+  width: 80%;
   justify-content: center;
   text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 3%;
+}
+#TextFieldBox__InputOutputFormTab3 {
+  color: white;
+  margin-left: 10.2%;
+  width: 81%;
 }
