modify overflowX Screen

--- a/src/styles/screens/ProblemFormScreen/ProblemFormScreen.scss
+++ b/src/styles/screens/ProblemFormScreen/ProblemFormScreen.scss
@@ -16,7 +16,7 @@
     height: 50px;
     margin-top: 20px;
     margin-bottom: 2rem;
-    margin-left: 1.9rem;
+    margin-left: 10%;
     #NextButton__ProblemFormScreen {
       width: 90px;
     }
