--- a/src/styles/screens/ProblemFormScreen/ProblemTabs/ProblemTab1/ProblemTab1.scss
+++ b/src/styles/screens/ProblemFormScreen/ProblemTabs/ProblemTab1/ProblemTab1.scss
@@ -111,13 +111,10 @@
     color: white;
     font-family: arial;
     font-size: 18px;
-    // margin-left: 1.28rem;
-    // margin-right: 0.5rem;
   }
   #TextAreaLgBox {
-    padding: 1rem;
     margin-top: 1rem;
-    margin-left: 1rem;
+    margin-left: 8%;
     #TextAreaLg {
       width: 65vh;
       background-color: #282a36;
