add edit icon styles scss

--- a/src/styles/screens/ProblemFormScreen/ProblemFormScreen.scss
+++ b/src/styles/screens/ProblemFormScreen/ProblemFormScreen.scss
@@ -8,6 +8,10 @@
   text-align: center;
   margin-top: 5rem;
 }
+#editProblemLink {
+  color: white;
+  text-decoration: none;
+}
 @media (max-width: 321px) {
   #buttonBox {
     display: flex;
