--- a/src/styles/screens/ProblemFormScreen/ProblemFormScreen.scss
+++ b/src/styles/screens/ProblemFormScreen/ProblemFormScreen.scss
@@ -5,6 +5,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
   text-align: center;
   margin-top: 5rem;
 }
