--- a/src/styles/screens/ProblemFormScreen/ProblemFormScreen.scss
+++ b/src/styles/screens/ProblemFormScreen/ProblemFormScreen.scss
@@ -13,6 +13,11 @@
     color: white;
     text-decoration: none;
 }
+
+.backButton {
+    margin-right: 20px;
+}
+
 @media (max-width: 321px) {
     #buttonBox {
         display: flex;
@@ -21,7 +26,6 @@
         height: 50px;
         margin-top: 20px;
         margin-bottom: 2rem;
-        margin-left: 10%;
         #NextButton__ProblemFormScreen {
             width: 90px;
         }
@@ -31,7 +35,6 @@
         }
         .button {
             width: 100%;
-            margin-left: 2rem;
         }
     }
 }
@@ -43,10 +46,8 @@
         height: 50px;
         margin-top: 20px;
         margin-bottom: 2rem;
-        margin-left: 2rem;
         #NextButton__ProblemFormScreen {
             width: 100px;
-            margin-left: 2rem;
         }
         #BackButton__ProblemFormScreen {
             width: 100px;
@@ -66,11 +67,8 @@
         margin-bottom: 2rem;
         margin-left: auto;
         margin-right: auto;
-        margin-left: 4rem;
         #NextButton__ProblemFormScreen {
             width: 100px;
-            margin-left: 2rem;
-            margin-right: 4rem;
         }
         #BackButton__ProblemFormScreen {
             width: 100px;
@@ -89,14 +87,10 @@
         height: 50px;
         margin-top: 20px;
         margin-bottom: 2rem;
-        margin-left: 3.5rem;
         #NextButton__ProblemFormScreen {
             width: 100px;
-            margin-left: 2rem;
-            margin-right: 4rem;
         }
         #BackButton__ProblemFormScreen {
-            margin-left: 1rem;
             width: 100px;
         }
         .button {
@@ -124,11 +118,13 @@
     #buttonBox {
         display: flex;
         justify-content: flex-end;
-        width: 75%;
+        width: 60.3%;
         height: 50px;
         margin-top: 20px;
+        margin-bottom: 2rem;
         #BackButton__ProblemFormScreen {
             width: 100px;
+            margin-right: 2rem;
         }
         #NextButton__ProblemFormScreen {
             width: 100px;
@@ -145,9 +141,10 @@
     #buttonBox {
         display: flex;
         justify-content: flex-end;
-        width: 75%;
+        width: 90%;
         height: 50px;
         margin-top: 20px;
+        margin-bottom: 2rem;
         #BackButton__ProblemFormScreen {
             width: 100px;
         }
@@ -165,9 +162,10 @@
     #buttonBox {
         display: flex;
         justify-content: flex-end;
-        width: 75%;
+        width: 81.5%;
         height: 50px;
         margin-top: 20px;
+        margin-bottom: 2rem;
         #NextButton__ProblemFormScreen {
             width: 100px;
         }
